force-app/main/default/objects/Test_object__c/Test_object__c.object-meta.xml
<CustomObject>
    <description>ddfdfdf</description>
    <label>Test object</label>
    <nameField>
        <label>Test object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>