force-app/main/default/objects/Test_object__c/fields/Another_field__c.field-meta.xml
<CustomField>
    <fullName>Another_field__c</fullName>
    <label>Another field</label>
    <length>13</length>
    <type>Text</type>
</CustomField>