force-app/main/default/objects/Test_object__c/fields/deploy_tst__c.field-meta.xml
<CustomField>
    <fullName>deploy_tst__c</fullName>
    <label>deploy tst</label>
    <length>12</length>
    <type>Text</type>
</CustomField>